modified:   Home.html modified:   css/home-style.css modified:   js/popup.js modified:   tabla-estudiantes.html

--- a/css/home-style.css
+++ b/css/home-style.css
@@ -401,6 +401,7 @@ body {
 }
 
 .popup .form_element {
+    color: #1c3c96;
     margin: 15px 0px;
 }
 
@@ -566,3 +567,4 @@ body {
 .add-user-diurno {
     color: #fff;
 }
+
