new file:   Delete.php modified:   Home.php modified:   conexion.php new file:   confirmacion_eliminar.php modified:   confirmacion_matricula.php modified:   css/home-style.css new file:   editar.php modified:   index.html modified:   login.php modified:   matricula.php modified:   matricula_diurno.php modified:   tabla-estudiantes.php deleted:    tabla-estudiantes_10.php deleted:    tabla-estudiantes_11.php deleted:    tabla-estudiantes_12.php deleted:    tabla-estudiantes_7.php deleted:    tabla-estudiantes_8.php deleted:    tabla-estudiantes_9.php deleted:    tabla-estudiantes_noc.php deleted:    tabla-estudiantes_noc_10.php deleted:    tabla-estudiantes_noc_11.php deleted:    tabla-estudiantes_noc_12.php deleted:    tabla-estudiantes_pn.php deleted:    tabla-estudiantes_pn_10.php deleted:    tabla-estudiantes_pn_11.php deleted:    tabla-estudiantes_pn_12.php deleted:    tabla-estudiantes_pn_7.php deleted:    tabla-estudiantes_pn_8.php deleted:    tabla-estudiantes_pn_9.php new file:   update.php new file:   update_confirmation.php deleted:    vdhkgimy_matricula (1).sql

--- a/css/home-style.css
+++ b/css/home-style.css
@@ -205,17 +205,13 @@ body {
 .HeaderComponent_Container { /* barra horizontal de navegación */
     height: 70px;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     background: rgb(255, 255, 255);
     border-bottom: 1px solid #000;
     transition: 0.3s;
 }
 
-.menu_bar {
-    display: flex;
-    align-items: center;
-}
 
 .navigation {
     display: flex;
